v0.5/fastn-p1/src/snapshots/fastn_p1__test__parse_output@001-empty.ftd.snap
---
source: fastn-p1/src/lib.rs
expression: "fastn_p1::ParseOutput::new(\"foo\", &s)"
input_file: fastn-p1/t/001-empty.ftd
---
doc_name: foo
module_doc: ~
items: []
line_starts: []
